# sbc_final

./: .gitignore  GEMMA_LORA_GUIDE.md  HANDOFF_LOCAL_LLM.md  LOCAL_LLM_HANDOFF.md  NODE_DEV_GUIDE.md  README.md  agent.js  index.html  package-lock.json  package.json  run_pipeline.py  sample_workflow.json  tailwind.config.js  test_all_nodes.py  test_reply5.txt  test_reply6.txt  test_reply7.txt  tsconfig.json  vite.config.ts  work.md
_archive/: README.md
_archive/re_dumps/: test_cvd.txt  test_reply.txt  test_reply2.txt  test_reply3.txt  test_reply4.txt
data/: .secrets.json.example  TeacherFlow_Claude.pptx  TeacherFlow_GPT41.pptx  TeacherFlow_TwoStage.pptx  sample_출장신청서.xlsx  settings.json  완성_출장신청서.xlsx
data/presets/: preset_form_fill.json  preset_gongmun_gen.json
docs/: develop.md
engine/: __init__.py  chat_handler.py  deps.py  form_assist.py  hwp_controller.py  live_controller.py  llm_manager.py  loader.py  memory_manager.py  node_marketplace.py  requirements.txt  runner.py  server.py  settings.py  storage.py  table_utils.py  types.py  vector_store.py
scripts/: benchmark_form_fill.py  benchmark_last_result.json  demo_claude.py  model_matrix.py  ppt_claude.py  ppt_gpt41.py  ppt_twostage.py  ppt_twostage_generated.py  test_form_fill.py
src/: App.tsx  constants.ts  defaultNodes.ts  iconMap.ts  index.css  store.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
tests/: README.md  helpers.py  hwp_op.py  run_tests.py  test_com.py  test_e2e.py  test_edit.py  test_offline.py
(+151 files in other folders)
