[package]
name = "teacherflow"
version = "0.1.0"
description = "교사 업무 자동화 노드 에디터"
authors = ["신병철"]
edition = "2021"

[lib]
name = "teacherflow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
